@@ -19,7 +19,7 @@ CFLAGS = $(CXXFLAGS) -lm
 # How to execute a command as root:
 ROOTCMD=su root -c
 # alternatively:
-#ROOTCMD=sudo -u root /bin/bash -c
+#ROOTCMD=sudo -u root /bin/sh -c
 
 # Where to install setuid root binaries: (default: own directory)
 SUIDINSTALLDIR=$(CURDIR)
@@ -36,7 +36,7 @@ default:
 
 # Helper target to read DBNAME from config:
 finddbname: fixconfig
-	$(eval DBNAME=$(shell source $(TOPDIR)/etc/config.sh ; echo $$DBNAME))
+	$(eval DBNAME=$(shell . $(TOPDIR)/etc/config.sh ; echo $$DBNAME))
 
 # Extra phony target to generate up-to-date config for finddbname.
 # Needed because running this in finddbname seems broken: the old file
